<resources>
    <string name="app_name">ColourMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="how_to_play">How to Play:</string>
    <string name="info_text">Tap the hidden boxes. If you can\'t find them, tap the screen.
        Tap the buttons at the button to change a random box to that colour.</string>
</resources>